# agentarchives

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  Makefile  README.md  atom.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: test.yml
agentarchives/: __init__.py  archivematicaCreateStructuredDirectory.sh
agentarchives/archivesspace/: client.py
agentarchives/archivists_toolkit/: client.py
agentarchives/atom/: client.py
misc/: Dockerfile.2  Dockerfile.3  test.sh
requirements/: base.txt  local.txt
tests/: test_archivesspace_client.py  test_atom_client.py
tests/fixtures/: test_add_digital_object.yaml  test_add_digital_object_component.yaml  test_add_digital_object_note.yaml  test_add_nested_digital_object_component.yaml  test_adding_a_digital_object_to_a_record_with_a_singlepart_note.yaml  test_adding_child_with_note.yaml  test_client_logout.yaml  test_contentless_notes.yaml  test_date_expression.yaml  test_edit_record_empty_note.yaml  test_edit_record_multiple_notes.yaml  test_empty_dates.yaml  test_find_resource_children_at_max_recursion_level.yaml  test_find_resource_component_children_at_max_recursion_level.yaml  test_listing_collections_search.yaml  test_listing_collections_search_spaces.yaml  test_posting_contentless_note.yaml  test_posting_multiple_notes.yaml  test_singlepart_note.yaml
tests/fixtures/atom/: test_add_child_resource.yaml  test_add_child_resource_component.yaml  test_add_digital_object.yaml  test_adding_child_with_note.yaml  test_augment_ids.yaml  test_collection_list.yaml  test_count_collection_ids.yaml  test_count_collection_ids_search.yaml  test_date_expression.yaml  test_delete_record_resource.yaml  test_edit_archival_object.yaml  test_edit_record_empty_note.yaml  test_empty_dates.yaml  test_find_collection_ids.yaml  test_find_collection_ids_search.yaml  test_find_collections_search.yaml  test_find_collections_search_no_results.yaml  test_find_component_parent_with_non_top_level_parent.yaml  test_find_component_parent_with_top_level_parent.yaml  test_find_resource_children.yaml  test_find_resource_children_recursion_level_two.yaml  test_find_resource_component_children_at_max_recursion_level.yaml  test_identifier_exact_match.yaml  test_levels_of_description.yaml  test_listing_collections.yaml  test_listing_collections_search_spaces.yaml  test_listing_collections_sort.yaml  test_note.yaml  test_posting_contentless_note.yaml
